# wgui

./: .gitignore  AGENTS.md  Cargo.toml  bundle_watch.bat  improvements.md  readme.md  repomix.sh  tsconfig.json  wgui.xml
.codex/environments/: environment.toml
.zed/: settings.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/fi/puppycorp/wgui/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/fi/puppycorp/wgui/: MainActivity.kt
android/app/src/main/java/fi/puppycorp/wgui/renderer/: RendererState.kt  WguiClient.kt  WguiModels.kt  WguiRenderer.kt
android/app/src/main/java/fi/puppycorp/wgui/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/fi/puppycorp/wgui/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: puppychat-sw.js
docs/: lsp.md  wui.md
examples/: puppychat__PuppyDb.db
examples/allcomponents/: Cargo.toml
examples/allcomponents/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/puppyarm/: Cargo.toml
examples/puppyarm/src/: main.rs
examples/puppychat/: .gitignore  Cargo.toml  build.rs  schema.wdb  wgui.toml
examples/puppychat/migrations/: 1771137235_init.sql  1771152272_init.sql  1772100000_push_subscriptions.sql
examples/puppychat/src/: context.rs  db.rs  main.rs  notifications.rs  routes.rs
examples/puppychat/src/components/: mod.rs  puppychat.rs
examples/puppychat/wui/: puppychat.wui
examples/puppychat/wui/pages/login/: index.wui
examples/puppychat/wui/pages/register/: index.wui
examples/three_demo/: Cargo.toml
examples/three_demo/src/: main.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
examples/todo_swift/: Package.swift  README.md
examples/todo_swift/Sources/TodoSwift/: TodoModels.swift  TodoStore.swift  TodoView.swift
examples/todo_wui/: Cargo.toml  build.rs
examples/todo_wui/src/: context.rs  main.rs  routes.rs
examples/todo_wui/src/components/: todo.rs
examples/todo_wui/src/controllers/: todo.rs  todo_controller.rs
examples/todo_wui/src/pages/: mod.rs  not_found.rs
examples/todo_wui/src/pages/todo/: index.rs  mod.rs  show.rs
examples/todo_wui/wui/: todo.wui
examples/todo_wui/wui/pages/: not_found.wui  todo.wui
examples/todo_wui/wui/pages/todo/: index.wui  show.wui
examples/todo_wui/wui/pages/todos/: index.wui  show.wui
examples/todo_wui/wui/partials/: navbar.wui
examples/urdf/: Cargo.toml
examples/urdf/src/: main.rs
tree-sitter-wui/: package.json
tree-sitter-wui/queries/: highlights.scm
ts/: app.js  app.ts  compact_item.ts  custom_components.ts  debouncer.js  debouncer.ts  logger.ts  message_sender.js  message_sender.ts  path.js  path.ts  path_test.ts  render.js  render.ts  theme.ts  three_host.js  three_host.ts  types.js  types.ts  web_push.ts  webrtc.ts  ws.js  ws.ts
wgui/: Cargo.toml
wgui/src/: axum.rs  db_table.rs  diff.rs  dist.rs  edit_distance.rs  gui.rs  lib.rs  pubsub.rs  schema_diff.rs  server.rs  sqlite.rs  ssr.rs  table.rs  types.rs  ui_client.rs  wdb.rs  ws.rs
wgui/src/wui/: ast.rs  build.rs  diagnostic.rs  expr.rs  imports.rs  mod.rs  parser.rs  route_handler.rs  runtime.rs
wgui/src/wui/compiler/: codegen.rs  ir.rs  lower.rs  mod.rs  registry.rs  validate.rs
wgui/tests/: http_post.rs  route_macro.rs
wgui/wui/pages/route_macro/: index.wui
wui-core/: Cargo.toml
wui-core/src/: ast.rs  expr.rs  imports.rs  lib.rs  parser.rs  routing.rs
wui-core/src/compiler/: codegen.rs  ir.rs  lower.rs  mod.rs  registry.rs  validate.rs
wui-derive/: Cargo.toml
wui-derive/src/: lib.rs
wui-lsp/: Cargo.toml
wui-lsp/src/: main.rs
zed-wui/: Cargo.toml  extension.toml  extension.wasm  wgui.xml
zed-wui/grammars/wui/: .gitignore  grammar.js
zed-wui/grammars/wui/src/: grammar.json  node-types.json  parser.c
zed-wui/languages/wui/: config.toml
zed-wui/src/: lib.rs
zed-wui/tests/: grammar.rs
