[package]
name = "wgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hyper"]
hyper = ["dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:hyper-tungstenite"]
sqlite = ["dep:rusqlite"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
hyper-tungstenite = { version = "0.13.0", optional = true }
wui-derive = { path = "../wui-derive" }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
