[package]
name = "wui-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ropey = "1.6"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

wgui = { path = "../wgui" }
