[package]
name = "puppychat"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
wgui = { path = "../../wgui", features = ["hyper"] }
log = "0.4"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[build-dependencies]
wgui = { path = "../../wgui" }
