[package]
name = "todo_wui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
wgui = { path = "../../wgui", default-features = false, features = ["axum"] }
axum = { workspace = true }
log = "0.4"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
wgui = { path = "../../wgui" }

[features]
default = ["axum"]
axum = []
